--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 
     setTimeout(() => {
       status.textContent =
-        "you`re still here. Go get a job.";
+        "ummmm...reward, Yeah your reward is this "Progress takes persistence.
+Sadly, this scroll didn’t.";
     }, 12000);
   }
 </script>
