--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     setTimeout(() => {
       status.textContent =
         "ummmm...reward, Yeah your reward is this "Progress takes persistence.
-Sadly, this scroll didn’t.";
+Sadly, thiss scroll didn’t.";
     }, 12000);
   }
 </script>
