--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
       status.textContent = "Still working on it...";
     }, 5000);
 
-    setTimeout(() => {
-      status.textContent =
-        "ummmm...reward, Yeah your reward is this "Progress takes persistence.
-Sadly, thiss scroll didn’t.";
-    }, 12000);
+ setTimeout(() => {
+  status.textContent =
+    "Ummm… reward? Yeah, your reward is : \"Progress takes persistence.\" Sadly, this scroll didn’t.";
+}, 12000);
   }
 </script>
 
