--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Chitransh</title>
+  <title>🤓</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -72,11 +72,11 @@
       <h1>Chitransh</h1>
 
       <div class="hello">
-        Hi 👋
+        Hello😄
       </div>
 
       <p>
-        I’m just a simple student who likes to play with technology.
+        I’m just a simple student who likes to do fun with technology.
         I enjoy learning how things work, breaking them sometimes,
         and fixing them again.
       </p>
