--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🤓</title>
+  <title>🫣</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -69,7 +69,7 @@
 <body>
   <div class="overlay">
     <div class="content">
-      <h1>Chitransh</h1>
+      <h1>🤓</h1>
 
       <div class="hello">
         Hello😄
