--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    * {
-      box-sizing: border-box;
+    .animate {
+  opacity: 0;
+  transform: translateY(12px);
+  animation: fadeUp 0.8s ease forwards;
+}
+
+.delay-1 { animation-delay: 0.3s; }
+.delay-2 { animation-delay: 0.7s; }
+.delay-3 { animation-delay: 1.1s; }
+
+@keyframes fadeUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
     }
 
     body {
@@ -67,24 +81,16 @@
 </head>
 
 <body>
-  <div class="overlay">
-    <div class="content">
-      <h1>🤓</h1>
+  <div class="content">
+  <div class="hello animate delay-1">Hello 😄</div>
 
-      <div class="hello">
-        Hello😄
-      </div>
+  <p class="animate delay-2">
+    I’m just a simple student who likes to do fun with technology.
+    I enjoy learning how things work, breaking them sometimes,
+    and fixing them again.
+  </p>
 
-      <p>
-        I’m just a simple student who likes to do fun with technology.
-        I enjoy learning how things work, breaking them sometimes,
-        and fixing them again.
-      </p>
-
-      <footer>
-        Still learning. Still curious.
-      </footer>
-    </div>
+  <footer class="animate delay-3">
+    Still learning. Still curious.
+  </footer>
   </div>
-</body>
-</html>
