--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🫣</title>
+  <title>Hello</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    .animate {
-  opacity: 0;
-  transform: translateY(12px);
-  animation: fadeUp 0.8s ease forwards;
-}
-
-.delay-1 { animation-delay: 0.3s; }
-.delay-2 { animation-delay: 0.7s; }
-.delay-3 { animation-delay: 1.1s; }
-
-@keyframes fadeUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+    * {
+      box-sizing: border-box;
     }
 
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       height: 100vh;
-      background: url("bg.jpg") no-repeat center center fixed;
-      background-size: cover;
+      overflow: hidden;
       color: #eaeaea;
     }
 
-    /* Dark overlay for comfort */
+    /* Background with slow zoom */
+    .bg {
+      position: fixed;
+      inset: 0;
+      background: url("bg.jpg") no-repeat center center;
+      background-size: cover;
+      transform: scale(1);
+      animation: slowZoom 40s ease-in-out infinite alternate;
+      will-change: transform;
+    }
+
+    @keyframes slowZoom {
+      from { transform: scale(1); }
+      to { transform: scale(1.08); }
+    }
+
+    /* Overlay for comfort */
     .overlay {
-      height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.45);
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(
+        rgba(0, 0, 0, 0.35),
+        rgba(0, 0, 0, 0.6)
+      );
       display: flex;
       align-items: center;
       justify-content: center;
@@ -52,45 +55,90 @@
       padding: 40px;
       border-radius: 16px;
       backdrop-filter: blur(4px);
-    }
-
-    h1 {
-      margin: 0 0 10px;
-      font-size: 42px;
-      font-weight: 600;
+      transform: translateY(0);
+      transition: transform 0.2s ease;
     }
 
     .hello {
-      font-size: 20px;
-      color: #cfcfcf;
-      margin-bottom: 25px;
+      font-size: 22px;
+      margin-bottom: 20px;
     }
 
-    p {
+    #text {
       font-size: 18px;
       line-height: 1.7;
-      color: #d6d6d6;
+      opacity: 0;
+      transition: opacity 0.6s ease;
+      min-height: 4em;
     }
 
     footer {
       margin-top: 30px;
       font-size: 14px;
-      color: #aaaaaa;
+      color: #bdbdbd;
+      opacity: 0;
+      transition: opacity 0.6s ease;
     }
   </style>
 </head>
 
 <body>
-  <div class="content">
-  <div class="hello animate delay-1">Hello 😄</div>
 
-  <p class="animate delay-2">
-    I’m just a simple student who likes to do fun with technology.
-    I enjoy learning how things work, breaking them sometimes,
-    and fixing them again.
-  </p>
+  <div class="bg" id="bg"></div>
 
-  <footer class="animate delay-3">
-    Still learning. Still curious.
-  </footer>
+  <div class="overlay">
+    <div class="content" id="card">
+      <div class="hello">Hello 😄</div>
+
+      <p id="text"></p>
+
+      <footer id="footer">Still learning. Still curious.</footer>
+    </div>
   </div>
+
+<script>
+  /* Text slideshow */
+  const texts = [
+    "I’m just a simple student who likes to do fun with technology.",
+    "I enjoy learning how things work.",
+    "Sometimes I break things.",
+    "Sometimes I fix them again."
+  ];
+
+  let index = 0;
+  const textEl = document.getElementById("text");
+  const footerEl = document.getElementById("footer");
+
+  function changeText() {
+    textEl.style.opacity = 0;
+
+    setTimeout(() => {
+      textEl.textContent = texts[index];
+      textEl.style.opacity = 1;
+      index = (index + 1) % texts.length;
+    }, 500);
+  }
+
+  changeText();
+  setInterval(changeText, 3500);
+
+  /* Fade footer once */
+  setTimeout(() => {
+    footerEl.style.opacity = 1;
+  }, 2500);
+
+  /* Subtle parallax */
+  const bg = document.getElementById("bg");
+  const card = document.getElementById("card");
+
+  window.addEventListener("mousemove", (e) => {
+    const x = (e.clientX / window.innerWidth - 0.5) * 10;
+    const y = (e.clientY / window.innerHeight - 0.5) * 10;
+
+    bg.style.transform = `scale(1.05) translate(${-x}px, ${-y}px)`;
+    card.style.transform = `translate(${x * 0.3}px, ${y * 0.3}px)`;
+  });
+</script>
+
+</body>
+</html>
